--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     })();
   </script>
 
-  <title>Smoking Bee Teste</title>
+  <title>Smoking Bee</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
